@startuml

title __PUB_SUB's Class Diagram__\n

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.Broker {
        - subscribers : ConcurrentHashMap<String, List<Subscriber>>
        ~ Broker()
        ~ addSubscriber()
        ~ getSubscribersForTopic()
        ~ removeSubscriber()
        - keyNotEmpty()
        - objectNotNull()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.FileSubscriber {
        {static} - log : Logger
        - name : String
        - outputStream : OutputStream
        + getName()
        + receive()
        ~ FileSubscriber()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.Message {
        - receivedOn : long
        - receiver : String
        - sender : String
        - sentOn : long
        - topic : String
        + getPayload()
        + getReceivedOn()
        + getReceiver()
        + getSender()
        + getSentOn()
        + getTopic()
        + setPayload()
        + setReceivedOn()
        + setReceiver()
        + setSender()
        + setSentOn()
        + setTopic()
        ~ getBytes()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.MessagePublisher {
        - name : String
        + getName()
        + publish()
        ~ MessagePublisher()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.PublishService {
        {static} - log : Logger
        + PublishService()
        ~ publish()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    interface in.ashwanik.pdp.pub_sub.Publisher {
        {abstract} + getName()
        {abstract} + publish()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    class in.ashwanik.pdp.pub_sub.SubscribeService {
        + SubscribeService()
        ~ subscribe()
        ~ unsubscribe()
    }
  }
  

  namespace in.ashwanik.pdp.pub_sub {
    interface in.ashwanik.pdp.pub_sub.Subscriber {
        {abstract} + getName()
        {abstract} + receive()
    }
  }
  

  in.ashwanik.pdp.pub_sub.FileSubscriber .up.|> in.ashwanik.pdp.pub_sub.Subscriber
  in.ashwanik.pdp.pub_sub.Message o-- T : payload
  in.ashwanik.pdp.pub_sub.MessagePublisher .up.|> in.ashwanik.pdp.pub_sub.Publisher
  in.ashwanik.pdp.pub_sub.PublishService o-- in.ashwanik.pdp.pub_sub.Broker : broker
  in.ashwanik.pdp.pub_sub.SubscribeService o-- in.ashwanik.pdp.pub_sub.Broker : broker


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
